agrego iconos en las vistas

--- a/AquaNet/vistas/voluntariadoVista.html
+++ b/AquaNet/vistas/voluntariadoVista.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AquaNet - Voluntariados</title>
 <link rel="stylesheet" href="/AquaNet/css/voluntariado.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 <header class="encabezado">
@@ -19,7 +20,7 @@
 </nav>
 <div class="usuario">
 <span>Usuario</span>
-<div class="icono-usuario">👤</div>
+<div class="icono-usuario"><i class="fa-solid fa-user"></i></div>
 </div>
 </div>
 </header>
