--- a/AquaNet/vistas/home.html
+++ b/AquaNet/vistas/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/AquaNet/css/home.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>AquaNet - Home</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
             </nav>
             <div class="usuario">
                 <span>Usuario</span>
-                <div class="icono-usuario">👤</div>
+                <div class="icono-usuario"><i class="fa-solid fa-user"></i></div>
             </div>
         </div>
     </header>
