Agrego imagenes y foroActualizado

--- a/AquaNet/vistas/voluntariadoVista.html
+++ b/AquaNet/vistas/voluntariadoVista.html
@@ -6,6 +6,8 @@
 <title>AquaNet - Voluntariados</title>
 <link rel="stylesheet" href="/AquaNet/css/voluntariado.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+ 
+ 
 </head>
 <body>
 <header class="encabezado">
@@ -21,6 +23,7 @@
 <div class="usuario">
 <span>Usuario</span>
 <div class="icono-usuario"><i class="fa-solid fa-user"></i></div>
+ 
 </div>
 </div>
 </header>
@@ -68,7 +71,7 @@
 </article>
  
             <article class="tarjeta-voluntariado">
-<img src="/AquaNet/img/apoyo-comunitario.jpg" alt="Apoyo comunitario" class="imagen-fondo">
+<img src="/AquaNet/img/apoyo-comunitario.png" alt="Apoyo comunitario" class="imagen-fondo">
 <div class="overlay"></div>
 <div class="contenido-tarjeta">
 <h2 class="titulo-tarjeta">Apoyo comunitario</h2>
@@ -78,7 +81,7 @@
 </article>
  
             <article class="tarjeta-voluntariado">
-<img src="/AquaNet/img/tecnologia-datos.jpg" alt="Tecnología y datos" class="imagen-fondo">
+<img src="/AquaNet/img/tecnologia-datos.png" alt="Tecnología y datos" class="imagen-fondo">
 <div class="overlay"></div>
 <div class="contenido-tarjeta">
 <h2 class="titulo-tarjeta">Tecnología y datos</h2>
